package com.candle.fileexplorer;

import javafx.application.Application;

/**
 * The class that tells JavaFX to launch the application.
 */
public class StartFilesApp
{
    public static void main(String[] args)
    {
        Application.launch(FilesApp.class);
    }
}